--- a/style.css
+++ b/style.css
@@ -46,30 +46,29 @@ html {
 
 header {
     width: 100%;
-    align-items: center;
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.5);
     padding: 0px 5px;
     display: flex;
     background-color: rgb(0, 0, 0);
     height: 9vh;
     position: fixed;
- 
+    margin: auto;
 }
 
 header nav {
     margin: auto;
     width: auto;
-
 }
 
 header ul {
     display: flex;
     margin: auto;
-
+    
 }
 
 header li {
     margin-right: 4vw;
+    text-align: center;
 }
 
 header a {
@@ -432,7 +431,7 @@ header a:hover {
 
 }
 
-@media screen and (max-width:570px) {
+@media screen and (max-width:600px) {
     .box-skill {
         width: 150px;
         padding-left: 40px;                              
@@ -648,14 +647,13 @@ header a:hover {
     .container-projects {
         width: 100%;
         height: 100%;
-        margin: auto;
         margin-top: 5vh;
         margin-bottom: 5vh;
     }
     
     .box-image {
         margin-left: 7vw;
-        align-items: center;
+        text-align: center;
         display: inline-block;
         width: 100%;
         height: 100%;
