--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
     background-color: rgb(0, 0, 0);
     height: 9vh;
     position: fixed;
-    margin: auto;
+    text-align: center;
 }
 
 header nav {
@@ -61,12 +61,13 @@ header nav {
 
 header ul {
     display: flex;
-    margin: auto;
+    list-style: none;
+    box-sizing: border-box;
 }
 
 header li {
-    text-align: center;
     padding: 10px;
+    
 }
 
 header a {
@@ -83,10 +84,7 @@ header a {
     font-family: 'Libre Baskerville', serif;
 }
 
-#container {
-    margin: auto !important;
 
-}
 
 
 @media (max-width: 768px) {
